unpackaged/main/default/objects/Payment__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E011</fullName>
            </value>
            <value>
                <fullName>Club</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>