unpackaged/main/default/objects/Payment__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <formula>TEXT(Reimbursement__r.ACG_Decision__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Decision</label>
    <type>Text</type>
</CustomField>