unpackaged/main/default/objects/Payment__c/fields/Document_Description__c.field-meta.xml
<CustomField>
    <fullName>Document_Description__c</fullName>
    <label>Document Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>