unpackaged/main/default/objects/Payment__c/fields/Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Item_Description__c</fullName>
    <label>Item Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>