unpackaged/main/default/objects/Payment__c/fields/Line_Row__c.field-meta.xml
<CustomField>
    <fullName>Line_Row__c</fullName>
    <label>Line Row</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>