unpackaged/main/default/objects/Payment__c/fields/Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reimbursement</label>
    <referenceTo>ACG_Reimbursement__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>