unpackaged/main/default/objects/Payment__c/fields/Spend_Category__c.field-meta.xml
<CustomField>
    <fullName>Spend_Category__c</fullName>
    <label>Spend Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>