unpackaged/main/default/objects/Payment__c/fields/Vendor_Id__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Id__c</fullName>
    <label>Vendor Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>