unpackaged/main/default/objects/Payment__c/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <label>Vendor Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>