unpackaged/main/default/objects/Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Document_Description__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Document_Date__c</columns>
    <columns>Service_Territory__c</columns>
    <columns>Item_Description__c</columns>
    <columns>Statement__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Territory__c</field>
        <operation>startsWith</operation>
        <value>N114</value>
    </filters>
    <label>All</label>
</ListView>